# yoke

./: .agent_memory.md  .gitignore  .goreleaser.yaml  CLAUDE.md  Makefile  README.md  agent_harnesses_essay.md  doc.go  go.mod  go.sum  main.go
.agents/build-and-test/: SKILL.md
.claude/: settings.json
.github/workflows/: release.yml
agent/: agent.go  agentmd_plugin.go  agentmd_plugin_test.go  build_plugins.go  build_subagents.go  build_toolsets.go  embedder.go  infrastructure.go  instructions.go  instructions_test.go  manager.go  manager_reload_race_test.go  manager_test.go  non_concurrent_tool.go  non_concurrent_tool_test.go  parallel_agent_tool.go  parallel_agent_tool_test.go  permission_asker.go  routing.go  routing_test.go  runtime_config.go  runtime_config_test.go  session_reseed.go  session_title.go  session_title_test.go  settings_confirm.go  skill_deps_gate.go  skill_frontmatter_test.go  squad.go  squads_test.go
agent/instructions/: default.md  investigator.md  leader.md  summariser.md  web_agent.md
cmd/full/: main.go
config/: agent.yaml  agents.json  models.json  permissions.json
core/agentkit/: agentkit.go
core/events/: events.go
core/llm/: cache_test.go  llm.go  openai.go  retry_test.go  stall.go
core/permissions/: cache.go  match_bash.go  permissions.go  permissions_test.go  persist.go  reloader.go
core/tools/: bash.go  cwd.go  cwd_test.go  search.go  tools.go
docs/: configuration.md
examples/s06_compress/: main.go
examples/s19_interrupt/: main.go
internal/a2a/: a2a.go  client.go  (+3 more)
packaging/: README.md
packaging/pip/: README.md  pyproject.toml  setup.py
packaging/pip/src/yoke/: __init__.py  launcher.py  seed.py
scripts/: build_wheels.py
server/: a2a_server.go  a2a_server_test.go  agentmd.go  auth.go  auth_test.go  bash.go  config.go  config_test.go  gc.go  history.go  import_agent.go  install_helpers.go  layers.go  mailbox_push.go  main.go  preferences.go  remote_registry_agents.go  remote_registry_mcp.go  selfupdate.go  server.go  sessions.go  skills.go  sse.go
web/: app.js  index.html  settings.css  settings.js  styles.css
(+130 files in other folders)
